made conform to java 8 features